@@ -179,7 +179,7 @@ public class MCRMetadataStoreTest extends MCRIFS2MetadataTestCase {
         while (IDs.hasNext()) {
             int id = IDs.next();
             if (!l1.isEmpty()) {
-                assertTrue(id > l1.get(l1.size() - 1));
+                assertTrue(id > l1.getLast());
             }
             l1.add(id);
         }
@@ -189,7 +189,7 @@ public class MCRMetadataStoreTest extends MCRIFS2MetadataTestCase {
         while (IDs.hasNext()) {
             int id = IDs.next();
             if (!l2.isEmpty()) {
-                assertTrue(id < l2.get(l2.size() - 1));
+                assertTrue(id < l2.getLast());
             }
             l2.add(id);
         }
